# fabric

./: .gitignore  WORKSPACE
domains/bedrock/: BUILD  pyproject.toml
domains/bedrock/bedrock/app/: app_id.py  module.py
domains/bedrock/bedrock/config/: module.py
domains/bedrock/bedrock/di/: module.py
domains/bedrock/bedrock/health/: module.py  router.py
domains/bedrock/bedrock/http/: module.py  response.py  routers.py
domains/bedrock/src/utils/: main.py
domains/bedrock/tests/app/: module_test.py
domains/boilerplate/: BUILD  main.py  pyproject.toml
domains/boilerplate/boilerplate/: main.py
domains/boilerplate/src/main/: main.py
